tests/ast_interpreter/err_var_redeclare.expected
<string>:2:5: error: variable "x" already defined
var x = 20;
    ^